flutter_dubov_system_native/lib/flutter_dubov_system_native_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset('flutter_dubov_system_native')
library;

import 'dart:ffi' as ffi;

@ffi.Native<ffi.Void Function(IntArray)>()
external void freeIntArray(IntArray array);

@ffi.Native<ffi.Void Function(PlayerArray)>()
external void freePlayerArray(PlayerArray array);

@ffi.Native<ffi.Void Function(MatchArray)>()
external void freeMatchArray(MatchArray array);

/// Player related functions
@ffi.Native<
  PlayerHandle Function(ffi.Pointer<ffi.Char>, ffi.Int, ffi.Int, ffi.Double)
>()
external PlayerHandle create_player(
  ffi.Pointer<ffi.Char> name,
  int rating,
  int id,
  double points,
);

@ffi.Native<PlayerHandle Function()>()
external PlayerHandle create_player_default();

@ffi.Native<ffi.Void Function(PlayerHandle)>()
external void destroy_player(PlayerHandle player);

@ffi.Native<ffi.Pointer<ffi.Char> Function(PlayerHandle)>()
external ffi.Pointer<ffi.Char> getName(PlayerHandle player);

@ffi.Native<ffi.Int Function(PlayerHandle)>()
external int getRating(PlayerHandle player);

@ffi.Native<ffi.Int Function(PlayerHandle)>()
external int getID(PlayerHandle player);

@ffi.Native<ffi.Int Function(PlayerHandle)>()
external int getNumColors(PlayerHandle player);

@ffi.Native<ffi.Int Function(PlayerHandle)>()
external int getOppCount(PlayerHandle player);

@ffi.Native<ffi.Int Function(PlayerHandle)>()
external int getNumUpfloat(PlayerHandle player);

@ffi.Native<ffi.Double Function(PlayerHandle)>()
external double getPoints(PlayerHandle player);

@ffi.Native<ffi.Bool Function(PlayerHandle, PlayerHandle)>()
external bool canPlayOpp(PlayerHandle player, PlayerHandle opp);

@ffi.Native<ffi.Double Function(PlayerHandle)>()
external double getARO(PlayerHandle player);

@ffi.Native<ffi.Void Function(PlayerHandle, ffi.Int)>()
external void addOpp(PlayerHandle player, int id);

@ffi.Native<ffi.Void Function(PlayerHandle, ffi.UnsignedInt)>(
  symbol: 'addColor',
)
external void _addColor(PlayerHandle player, int c);

void addColor(PlayerHandle player, ColorHandle c) => _addColor(player, c.value);

@ffi.Native<ffi.UnsignedInt Function(PlayerHandle)>(symbol: 'getDueColor')
external int _getDueColor(PlayerHandle player);

ColorHandle getDueColor(PlayerHandle player) =>
    ColorHandle.fromValue(_getDueColor(player));

@ffi.Native<ffi.UnsignedInt Function(PlayerHandle)>(
  symbol: 'getPreferenceStrength',
)
external int _getPreferenceStrength(PlayerHandle player);

ColorPreferenceHandle getPreferenceStrength(PlayerHandle player) =>
    ColorPreferenceHandle.fromValue(_getPreferenceStrength(player));

@ffi.Native<ffi.Void Function(PlayerHandle)>()
external void incrementUpfloat(PlayerHandle player);

@ffi.Native<ffi.Bool Function(PlayerHandle, ffi.Int)>()
external bool canUpfloat(PlayerHandle player, int cr);

@ffi.Native<ffi.Int Function(PlayerHandle, ffi.Int)>()
external int getNumUpfloatedIfMaxUpfloater(
  PlayerHandle player,
  int total_rounds,
);

@ffi.Native<IntArray Function(PlayerHandle)>()
external IntArray getOppPlayed(PlayerHandle player);

@ffi.Native<ffi.Void Function(PlayerHandle, ffi.Int)>()
external void addOppRating(PlayerHandle player, int r);

@ffi.Native<ffi.Bool Function(PlayerHandle)>()
external bool upfloatedPreviously(PlayerHandle player);

@ffi.Native<ffi.Void Function(PlayerHandle, ffi.Bool)>()
external void setUpfloatPrevStatus(PlayerHandle player, bool s);

@ffi.Native<ffi.Void Function(PlayerHandle, ffi.Double)>()
external void addPoints(PlayerHandle player, double pt);

@ffi.Native<ffi.Bool Function(PlayerHandle)>()
external bool hasReceievedBye(PlayerHandle player);

@ffi.Native<ffi.Void Function(PlayerHandle, ffi.Bool)>()
external void setByeStatus(PlayerHandle player, bool s);

@ffi.Native<ffi.Void Function(PlayerHandle, ffi.Int)>()
external void addPairingRestriction(PlayerHandle player, int opp_id);

@ffi.Native<ffi.Bool Function(PlayerHandle, PlayerHandle)>()
external bool shouldAlternate(PlayerHandle player, PlayerHandle opp);

@ffi.Native<ffi.Bool Function(PlayerHandle, PlayerHandle)>()
external bool isColorHistEqual(PlayerHandle player, PlayerHandle opp);

@ffi.Native<ffi.UnsignedInt Function(PlayerHandle)>(
  symbol: 'getFirstColorPlayed',
)
external int _getFirstColorPlayed(PlayerHandle player);

ColorHandle getFirstColorPlayed(PlayerHandle player) =>
    ColorHandle.fromValue(_getFirstColorPlayed(player));

@ffi.Native<ffi.Int Function(ffi.Int)>()
external int getMaxUpfloatTimes(int total_rounds);

/// Tournament related functions
@ffi.Native<TournamentHandle Function(ffi.Int)>()
external TournamentHandle create_tournament(int total_rounds);

@ffi.Native<ffi.Void Function(TournamentHandle)>()
external void destroy_tournament(TournamentHandle tournament);

@ffi.Native<ffi.Void Function(TournamentHandle, PlayerHandle)>()
external void addPlayer(TournamentHandle tournament, PlayerHandle player);

@ffi.Native<ffi.Void Function(TournamentHandle, ffi.Bool)>()
external void setRound1Color(TournamentHandle tournament, bool make_white);

@ffi.Native<PlayerArray Function(TournamentHandle)>()
external PlayerArray getPlayers(TournamentHandle tournament);

@ffi.Native<ffi.Bool Function(TournamentHandle)>()
external bool pairingErrorOccured(TournamentHandle tournament);

@ffi.Native<ffi.Int Function(TournamentHandle)>()
external int getPlayerCount(TournamentHandle tournament);

@ffi.Native<MatchArray Function(TournamentHandle, ffi.Int)>()
external MatchArray generatePairings(TournamentHandle tournament, int r);

@ffi.Native<MatchArray Function(TournamentHandle, ffi.Int, ffi.Bool)>()
external MatchArray generatePairingsBaku(
  TournamentHandle tournament,
  int r,
  bool baku_acceleration,
);

typedef PlayerHandle = ffi.Pointer<ffi.Void>;
typedef TournamentHandle = ffi.Pointer<ffi.Void>;

enum ColorHandle {
  COLOR_HANDLE_WHITE(0),
  COLOR_HANDLE_BLACK(1),
  COLOR_HANDLE_NO_COLOR(2);

  final int value;
  const ColorHandle(this.value);

  static ColorHandle fromValue(int value) => switch (value) {
    0 => COLOR_HANDLE_WHITE,
    1 => COLOR_HANDLE_BLACK,
    2 => COLOR_HANDLE_NO_COLOR,
    _ => throw ArgumentError('Unknown value for ColorHandle: $value'),
  };
}

enum ColorPreferenceHandle {
  COLOR_PREF_NO_PREFERENCE(0),
  COLOR_PREF_MILD(1),
  COLOR_PREF_ALTERNATION(2),
  COLOR_PREF_ABSOLUTE(3);

  final int value;
  const ColorPreferenceHandle(this.value);

  static ColorPreferenceHandle fromValue(int value) => switch (value) {
    0 => COLOR_PREF_NO_PREFERENCE,
    1 => COLOR_PREF_MILD,
    2 => COLOR_PREF_ALTERNATION,
    3 => COLOR_PREF_ABSOLUTE,
    _ => throw ArgumentError('Unknown value for ColorPreferenceHandle: $value'),
  };
}

final class MatchHandle extends ffi.Struct {
  external PlayerHandle white;

  external PlayerHandle black;

  @ffi.Bool()
  external bool is_bye;
}

final class IntArray extends ffi.Struct {
  external ffi.Pointer<ffi.Int> ptr;

  @ffi.Int()
  external int count;
}

final class PlayerArray extends ffi.Struct {
  external ffi.Pointer<PlayerHandle> ptr;

  @ffi.Int()
  external int count;
}

final class MatchArray extends ffi.Struct {
  external ffi.Pointer<MatchHandle> ptr;

  @ffi.Int()
  external int count;
}

const int __bool_true_false_are_defined = 1;

const int false$ = 0;

const int true$ = 1;
